Style tweaks, fix more bugs with visibility of collection tray

--- a/src/hub/css/card.css
+++ b/src/hub/css/card.css
@@ -57,16 +57,13 @@
 .wgsa-remove-fasta-button {
   position: absolute;
   right: 0rem;
-  bottom: 0rem;
-}
-
-.wgsa-hub-card button {
+  bottom: 0.3rem;
   height: 28px;
   width: 28px;
   min-width: 28px;
 }
 
-.wgsa-hub-card button > i {
+.wgsa-remove-fasta-button > i {
   font-size: 20px;
 }
 
@@ -86,8 +83,16 @@
 }
 
 .wgsa-hub-card-error > button {
-  bottom: 0;
-  color: rgba(0, 0, 0, 0.54);
+  bottom: 0rem;
   position: absolute;
-  right: 2rem;
+  left: 0.375rem;
+  width: auto;
+  background-color: rgba(158,158,158,.2);
+}
+
+.wgsa-hub-card-error > button:hover,
+.wgsa-hub-card-error > button:focus,
+.wgsa-hub-card-error > button:active {
+  background: #a386bd;
+  color: #fff !important;
 }
