--- a/src/hub/css/map.css
+++ b/src/hub/css/map.css
@@ -77,11 +77,17 @@
   height: 30px;
   margin-left: 5px;
   margin-top: 5px;
-
   text-align: center;
   border-radius: 15px;
-  font: 12px "Helvetica Neue", Arial, Helvetica, sans-serif;
+  font-size: 1rem;
+  font-weight: 700;
+  color: #fff;
 }
 .marker-cluster span {
   line-height: 30px;
+}
+
+.leaflet-overlay-pane > .leaflet-zoom-animated path {
+  stroke: #673c90;
+  stroke-opacity: 1;
 }
